force-app/main/default/objects/Ms_Sanction_Condition__c/Ms_Sanction_Condition__c.object-meta.xml
<CustomObject>
    <label>Ms Sanction Condition</label>
    <nameField>
        <displayFormat>S-No -{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ms Sanction Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>