force-app/main/default/objects/Ms_Sanction_Condition__c/fields/Sanction_condition_Description__c.field-meta.xml
<CustomField>
    <fullName>Sanction_condition_Description__c</fullName>
    <label>Sanction condition Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>