force-app/main/default/objects/Ms_Sanction_Condition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deviation</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Post Disbursal</fullName>
            </value>
            <value>
                <fullName>Document(PDD)</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>